- Added voting to SDK - Refactoring voting as a whole - Moved auth to headers

--- a/involvd_sdk/src/main/res/values/strings.xml
+++ b/involvd_sdk/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="error_bug_not_found">Bug report not found</string>
+    <string name="thanks_for_vote">Thanks for your vote</string>
 
 </resources>
