--- a/involvd_sdk/src/main/res/values/strings.xml
+++ b/involvd_sdk/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
 
     <string name="error_network_exception">Unable to connect at this time, are you connected to the internet?</string>
     <string name="error_network_timeout_exception">It\'s taking too long to connect to the server, please try again later.</string>
-    <string name="error_unknown">Some unknown error occurred, if this continues contact the developer</string>
+    <string name="error_sdk_unknown">Some unknown error occurred, if this continues contact the developer</string>
     <string name="error_network_error">Unable to connect, do you have an internet connection?</string>
 
     <string name="create_bug_success">Thanks for your bug report</string>
